--- a/www/listaEmpresas.html
+++ b/www/listaEmpresas.html
@@ -156,6 +156,10 @@
         </div>
     </div>
 
+    <center>
+        <span class="box-cinza cantinhos" style="width: 800px;padding: 10px;background-color: #267cb5;color: white;cursor:pointer;" onclick="pegaContatos();">contatos</span>
+    </center>
+
 </body>
 </html>
 
