--- a/www/enderecos.html
+++ b/www/enderecos.html
@@ -5,17 +5,16 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=10, minimum-scale=1, width=device-width" />
-
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/geral.css">
     <script type="text/javascript" src="js/urlen.js"></script>
     <script type="text/javascript" src="js/jsPesqEmpresas.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<title>PrintSource - Clientes</title>
+	<title>Clientes - Endereços</title>
     <meta http-equiv="Access-Control-Allow-Origin" content="http://printsource.jelasticlw.com.br">
 </head>
-<body onload="carregouContatos();">
+<body onload="carregaEnderecos();">
 <div class="menu1" id='m1'>
     <ul>
         <li><a class="menu1one" href="index.html">Home</a></li>
@@ -46,7 +45,8 @@
 
 <center><b>Empresa</b></span> <span id="tRazao"></span></center>
 <br>
-<span id="spanContatos"></span>
-<span id="spanHid"></span>
+<span id="spanEnderecos"></span>
+</body>
+</html>
 </body>
 </html>
