--- a/www/listaEmpresas.html
+++ b/www/listaEmpresas.html
@@ -159,6 +159,8 @@
         <br>
         <center>
             <span class="box-cinza cantinhos" style="width: 800px;padding: 10px;background-color: #267cb5;color: white;cursor:pointer;" onclick="pegaContatos();">contatos</span>
+            &nbsp;
+            <span class="box-cinza cantinhos" style="width: 800px;padding: 10px;background-color: #267cb5;color: white;cursor:pointer;" onclick="pegaEnderecos();">endereços</span>
         </center>
     </div>
 
