Pesquisando por contatos...

--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
                         <td>
                             <ul>
                                 <li><a href="listaEmpresas.html">Razão Social</a></li>
-                                <li><a href="listaFantasia.html">Fantasia</a></li>
+                                <li><a href="listaContatos.html">Contatos</a></li>
                             </ul>
                         </td>
                     </tr>
