--- a/www/contatos.html
+++ b/www/contatos.html
@@ -16,7 +16,7 @@
     <meta http-equiv="Access-Control-Allow-Origin" content="http://printsource.jelasticlw.com.br">
 </head>
 <body onload="carregouContatos();">
-<div class="menu1" id='m1'>
+<div class="menu1" id='m1' style="position:fixed;top:0;width: 100%;z-index: 2020;">
     <ul>
         <li><a class="menu1one" href="index.html">Home</a></li>
     </ul> 
